tests/EnvironmentTests/data/AmbiguousCallTest.xpl
integer f(integer x, real y) {}
integer f(real x, integer y) {}

node[] main() {
  f(1, 2);
}
